InsuranceOrg/force-app/main/default/objects/vlocity_ins__MarketingEventDetail__c/fields/vlocity_ins__ExternalTopicDescription__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ExternalTopicDescription__c</fullName>
    <description>External Description for the topic.</description>
    <label>External Topic Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>