InsuranceOrg/force-app/main/default/objects/vlocity_ins__MarketingEventDetail__c/fields/vlocity_ins__MarketingEventId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__MarketingEventId__c</fullName>
    <description>The parent Marketing Event for this Marketing Event Detail.</description>
    <label>Marketing Event</label>
    <referenceTo>vlocity_ins__MarketingEvent__c</referenceTo>
    <relationshipLabel>Marketing Event Details</relationshipLabel>
    <relationshipName>MarketingEvent</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>