InsuranceOrg/force-app/main/default/objects/vlocity_ins__MarketingEventDetail__c/fields/vlocity_ins__SessionDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SessionDate__c</fullName>
    <description>Date on which this Marketing Event session is scheduled for.</description>
    <label>Session Date</label>
    <type>Date</type>
</CustomField>