InsuranceOrg/force-app/main/default/objects/vlocity_ins__MarketingEventDetail__c/fields/vlocity_ins__SessionEndTime__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SessionEndTime__c</fullName>
    <description>Time on the session date, when this Marketing Event session is scheduled to end at.</description>
    <label>Session End Time</label>
    <type>Time</type>
</CustomField>