InsuranceOrg/force-app/main/default/objects/vlocity_ins__MarketingEventDetail__c/fields/vlocity_ins__SessionStartTime__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SessionStartTime__c</fullName>
    <description>Time on the session date, when this Marketing Event session would commence at.</description>
    <label>Session Start Time</label>
    <type>Time</type>
</CustomField>