InsuranceOrg/force-app/main/default/objects/vlocity_ins__MarketingEventDetail__c/fields/vlocity_ins__TopicName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__TopicName__c</fullName>
    <description>This will be the name of the Topic, to be covered at a specific session at the Marketing Event.</description>
    <label>Topic Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>