InsuranceOrg/force-app/main/default/objects/vlocity_ins__MarketingEventDetail__c/fields/vlocity_ins__TopicSpeakerContactId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__TopicSpeakerContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contact who will be presenting the topic at the Marketing Event.</description>
    <label>Topic Speaker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Marketing Event Details</relationshipLabel>
    <relationshipName>MarketingEventDetails</relationshipName>
    <type>Lookup</type>
</CustomField>