InsuranceOrg/force-app/main/default/objects/vlocity_ins__MarketingEventDetail__c/fields/vlocity_ins__TopicSpeakerURL__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__TopicSpeakerURL__c</fullName>
    <description>External link for this session&apos;s topic speaker. For instance, the speaker&apos;s LinkedIn page.</description>
    <label>Topic Speaker URL</label>
    <type>Url</type>
</CustomField>